--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,10 @@
     "ember": "~2.4.1",
     "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.2",
-    "ember-qunit-notifications": "0.1.0"
+    "ember-qunit-notifications": "0.1.0",
+    "bootstrap-sass": "^3.3.6",
+    "blob-polyfill": "^1.0.20150320",
+    "pikaday": "^1.4.0",
+    "moment": "^2.15.1"
   }
 }
