--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fe-ember-candidate",
   "version": "0.0.0",
-  "description": "Small description for fe-ember-candidate goes here",
+  "description": "fe-ember-candidate is an application for the iLoan Ember Engineer position",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -32,6 +32,7 @@
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "5.5.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.4.0",
@@ -39,10 +40,10 @@
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
-    "faker": "3.1.0",
-    "loader.js": "^4.0.0",
     "express": "^4.13.3",
+    "faker": "3.1.0",
     "glob": "^4.5.3",
+    "loader.js": "^4.0.0",
     "morgan": "^1.6.1"
   }
 }
